--- a/03-Basis-HTML/taak02 - HTML tags/index.html
+++ b/03-Basis-HTML/taak02 - HTML tags/index.html
@@ -1,4 +1,10 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Een website make is makkelijk</title>
+    </head>
 <body>
-<h1>Welkom Nfawaz global pagina</h1>    
-<p>fawaz alayesh</p> 
+<h1>Welkom op mijn website</h1>    
+<p>Je moet nog even geduld hebben. De styling komt later</p> 
 </body>
+</html>
