--- a/03-Basis-HTML/taak03 - regel 1 - informatie/index.html
+++ b/03-Basis-HTML/taak03 - regel 1 - informatie/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Artikel over nerds</title>
+        <title>"Artikel over nerds"</title>
     </head>
     <body>
         <article>
