--- a/03-Basis-HTML/taak06 - anchor tag/index.html
+++ b/03-Basis-HTML/taak06 - anchor tag/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>link naar pagina 2</title>
+    <title>link naar over mij</title>
   </head>
   <body>
 
