--- a/04-Basis-CSS/taak02 - CSS block/index.html
+++ b/04-Basis-CSS/taak02 - CSS block/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mijn eerste CSS</title>
+    <title>CSS block</title>
+    <style>
+        /* hier komt je css te staan */
+        body{
+            background-color: rgb(223, 21, 21);
+            color: yellow
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>"De meeste mensen deugen"</h1>
 </body>
 </html>
