CSS block changes

--- a/04-Basis-CSS/taak02 - CSS block/index.html
+++ b/04-Basis-CSS/taak02 - CSS block/index.html
@@ -7,7 +7,7 @@
     <style>
         /* hier komt je css te staan */
         body{
-            background-color: rgb(223, 21, 21);
+            background-color: red;
             color: yellow
         }
     </style>
