--- a/03-Basis-HTML/taak03 - regel 1 - informatie/index.html
+++ b/03-Basis-HTML/taak03 - regel 1 - informatie/index.html
@@ -5,18 +5,12 @@
     </head>
     <body>
         <article>
-            <div>
         <h1>'Nieuwe patatzaak is geopend!'</h1>
-        <p>Een bijzondere patatzaak aan de Keizersgracht wordt morgen 20 oktober geopend.</p>
-            </div>
-            <div>
-        <h2>'Burgermeester Halsema houdt de (nacht)wacht'</h2>
+        <p>'Een bijzondere patatzaak aan de Keizersgracht wordt morgen 20 oktober geopend.'</p>
+        <h1>'Burgermeester Halsema houdt de (nacht)wacht'</h1>
         <p>De Amsterdamse Burgemeester houdt wel van een biertje</p>
-            </div>
-            <div>
-        <h3> 'Frenkie De Jong scoort drie keer'</h3>
-        <p>De Jong heeft een van zijn betere dagen afgelopen zondag gehad bij FC Barcelona, hij scoorde weer eens!</p>
-        </div>
+        <h1>'Frenkie De Jong scoort drie keer'</h1>
+        <p>'De Jong heeft een van zijn betere dagen afgelopen zondag gehad bij FC Barcelona, hij scoorde weer eens!'</p>
         </article>
     </body>
 </html>
