--- a/05-Basis-Javascript/taak04 - input en output/index.html
+++ b/05-Basis-Javascript/taak04 - input en output/index.html
@@ -7,8 +7,13 @@
 </head>
 <body>
     <script>
-        let mijnVoornaam = prompt("Wat is je naam?");
+        let mijnVoornaam = prompt("Fawaz");
         alert(mijnVoornaam);
+    </script>
+    <script>
+    let mijnLeeftijd = 23;
+    let mijnAchternaam = "Alayesh";
+    let merkAuto = "Ford";
     </script>
 </body>
 </html>
