--- a/web.html
+++ b/web.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=5.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
 
     <title>Mijn online portfolio</title>
@@ -12,27 +12,30 @@
         }
     </style>
     <style>
-        .amsterdam{
-        color:teal;
-    }
-
-    </style>
-    <style>
         h1{
+            text-align: center;
             color:white;
         }
     </style>
     <style>
         p{
+            text-align: center;
             color:teal
         }
     </style>
+   <style>
+       img{
+           margin-left:auto;
+           margin-right:auto;
+           display:block;
+       }
+   </style>
 </head>
     <body>
         <h1>Ik ben</h1>
-<p class="amsterdam"> Fawaz Alayesh, 23 jaar ik kom uit Aalsmeer, ik studeer software development</P>
-<p class="amsterdam"> En als ICT student ben ik Probeer mezelf te verdiepen in programeertalen (HTML,CSS,JAVASCRIPT)</p>
-<p class="amsterdam"> Ik Ben blij dat ik een website kan maken, en dat maakt me zo trots </p>
+<p> Fawaz Alayesh, 23 jaar ik kom uit Aalsmeer, ik studeer software development</P>
+<p> En als ICT student ben ik Probeer mezelf te verdiepen in programeertalen (HTML,CSS,JAVASCRIPT)</p>
+<p> Ik Ben blij dat ik een website kan maken, en dat maakt me zo trots </p>
 
 <a href=file:>Link naar Over mij</a>
 
