--- a/web.html
+++ b/web.html
@@ -17,6 +17,7 @@
             color:white;
         }
     </style>
+
     <style>
         p{
             text-align: center;
@@ -34,13 +35,11 @@
     <body>
         <h1>Ik ben</h1>
 <p> Fawaz Alayesh, 23 jaar ik kom uit Aalsmeer, ik studeer software development</P>
-<p> En als ICT student ben ik Probeer mezelf te verdiepen in programeertalen (HTML,CSS,JAVASCRIPT)</p>
-<p> Ik Ben blij dat ik een website kan maken, en dat maakt me zo trots </p>
+<p> En als ICT student Probeer ik mezelf te verdiepen in programeertalen (HTML,CSS,JAVASCRIPT)</p>
+<p> Ik Ben blij dat ik een website kan maken, en dat maakt me zo trots </p> 
 
 <a href=file:>Link naar Over mij</a>
-
-
-   <img src="Fawaz.jpg">
+ <img src="Fawaz.jpg">
 
    <script>
     let mijnVoornaam = "Fawaz,23" 
