--- a/opdracht/Mijwebsite.html
+++ b/opdracht/Mijwebsite.html
@@ -38,7 +38,7 @@
 <p> En als ICT student Probeer ik mezelf te verdiepen in programeertalen (HTML,CSS,JAVASCRIPT)</p>
 <p> Ik Ben blij dat ik een website kan maken, en dat maakt me zo trots </p> 
 
-<a href=file:>Link naar Over mij</a>
+<a href=file:///C:/Users/fa_ay/OneDrive%20-%20ROCvA,%20ROCvF%20en%20VOvA/jaar1/frontend-basic/opdracht/Mijnwebsite2.html>Link naar mijn tweede pagina</a>
  <img src="Fawaz.jpg">
 
    <script>
