--- a/opdracht/Mijwebsite.html
+++ b/opdracht/Mijwebsite.html
@@ -37,8 +37,9 @@
 <p> Fawaz Alayesh, 23 jaar ik kom uit Aalsmeer, ik studeer software development</P>
 <p> En als ICT student Probeer ik mezelf te verdiepen in programeertalen (HTML,CSS,JAVASCRIPT)</p>
 <p> Ik Ben blij dat ik een website kan maken, en dat maakt me zo trots </p> 
-
+<button>
 <a href=file:///C:/Users/fa_ay/OneDrive%20-%20ROCvA,%20ROCvF%20en%20VOvA/jaar1/frontend-basic/opdracht/Mijnwebsite2.html>Link naar mijn tweede pagina</a>
+</button>
  <img src="Fawaz.jpg">
 
    <script>
