--- a/04-Basis-CSS/taak05 - Ids/index2.html
+++ b/04-Basis-CSS/taak05 - Ids/index2.html
@@ -9,11 +9,7 @@
             background-color: gray;
         }
     </style>
-    <style>
-        .amsterdam{
-        color: purple;
-    }
-    </style>
+
     <style>
         #politiek{
      color: green;
@@ -38,14 +34,14 @@
 </head>
 <body>
     <article>
-    <h4 class="amsterdam">'Nieuwe patatzaak is geopend!'</h4>
-    <p class="amsterdam">Een bijzondere patatzaak aan de Keizersgracht wordt morgen 20 oktober geopend.</p>
+    <h4>'Nieuwe patatzaak is geopend!'</h4>
+    <p>Een bijzondere patatzaak aan de Keizersgracht wordt morgen 20 oktober geopend.</p>
     <a href=file:///C:/Users/fa_ay/OneDrive%20-%20ROCvA,%20ROCvF%20en%20VOvA/jaar1/frontend-basic/04-Basis-CSS/taak03%20-%20Meerdere%20tags%20stylen/artikel1.html>Ga naar artikel 1</a>
-    <h4 class="amsterdam">'Burgermeester Halsema houdt de (nacht)wacht'</h4>
-    <p class="amsterdam" id="politiek">'De Amsterdamse Burgemeester houdt wel van een biertje'</p>
+    <h4>'Burgermeester Halsema houdt de (nacht)wacht'</h4>
+    <p id="politiek">'De Amsterdamse Burgemeester houdt wel van een biertje'</p>
     <a href=file:///C:/Users/fa_ay/OneDrive%20-%20ROCvA,%20ROCvF%20en%20VOvA/jaar1/frontend-basic/04-Basis-CSS/taak03%20-%20Meerdere%20tags%20stylen/artikel2.html>Ga naar artikel 2</a>
-    <h4 class="amsterdam">'Frenkie De Jong scoort drie keer'</h4>
-    <p class="asterdam">'De Jong heeft een van zijn betere dagen afgelopen zondag gehad bij FC Barcelona, hij scoorde weer eens!'</p>
+    <h4>'Frenkie De Jong scoort drie keer'</h4>
+    <p>'De Jong heeft een van zijn betere dagen afgelopen zondag gehad bij FC Barcelona, hij scoorde weer eens!'</p>
     <a href=file:///C:/Users/fa_ay/OneDrive%20-%20ROCvA,%20ROCvF%20en%20VOvA/jaar1/frontend-basic/04-Basis-CSS/taak03%20-%20Meerdere%20tags%20stylen/artikel3.html>Ga naar artikel 3</a>
     </article>
 
