--- a/opdracht/Mijwebsite.html
+++ b/opdracht/Mijwebsite.html
@@ -33,7 +33,7 @@
    </style>
 </head>
     <body>
-        <h1>Ik ben</h1>
+        <h1>Ik ben</h1>\
 <p> Fawaz Alayesh, 23 jaar ik kom uit Aalsmeer, ik studeer software development</P>
 <p> En als ICT student Probeer ik mezelf te verdiepen in programeertalen (HTML,CSS,JAVASCRIPT)</p>
 <p> Ik Ben blij dat ik een website kan maken, en dat maakt me zo trots </p> 
